day9/ingress-6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite: /
spec:
  ingressClassName: nginx
  rules:
  - host: giropops-senhas.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: giropops-senhas
            port: 
              number: 5000
